# expertel_webscrapers

./: .env.example  .gitignore  BELL_SESSION_MANAGEMENT_FLOW.md  BROWSER_FACTORY_REFACTOR.md  CLAUDE.md  DETAILED_EXECUTION_FLOW_ANALYSIS.md  PLAN_MULTI_PORTAL_SUPPORT.md  PROJECT_TECHNICAL_REFERENCE.md  SISTEMA_SCRAPERS_FLUJO_COMPLETO.md  TELUS_SCRAPER_COMPLETE_FLOW.md  buildspec.yml  emails_output.txt  main.py  pyproject.toml  scraperpoc.py  temp_replacements.py
.context/: 00_README.md  01_ARQUITECTURA_COMPLETA.md  02_ESCENARIOS_EJEMPLO.md  03_FLUJOS_TECNICOS.md  04_COMPONENTES_CLAVE.md  05_RESUMEN_EJECUTIVO.md  06_ARBOL_PROYECTO.md  07_DIAGRAMA_CLASES.puml  08_GUIA_DIAGRAMA_CLASES.md  INDEX.txt
authenticator_webhook/: emailmfa.py  sms2fa.py
config/: asgi.py  settings.py  urls.py  wsgi.py
deployment/: PLAN.md  README.md
deployment/aws/: README.md  deploy-dev.sh  deploy-prod.sh  deploy-qa.sh  manage-secrets.sh  plan-dev.sh  plan-prod.sh  plan-qa.sh
deployment/windows/: Deploy-Environment.ps1  Manage-Secrets.ps1
email2fa/: sms2fa.py
mfa/: main.py  sms2fa.py
mfa/application/: emailmfa.py
mfa/domain/: entities.py
mfa/infrastructure/: routes.py  verizon_captcha_solver.py
shared/domain/: annotations.py  enums.py
shared/domain/entities/: annotations.py  cqrs.py  pagination.py  repositories.py  specifications.py
shared/infrastructure/: utils.py
shared/infrastructure/django/: annotations.py  buiders.py  repositories.py  specifications.py
web_scrapers/application/: safe_scraper_job_service.py  scraper_job_service.py  session_manager.py
web_scrapers/domain/: enums.py
web_scrapers/domain/entities/: auth_strategies.py  browser_wrapper.py  models.py  ports.py  scraper_factory.py  scraper_strategies.py  session.py
web_scrapers/examples/: env_example.txt  session_manager_example.py
web_scrapers/infrastructure/: logging_config.py
web_scrapers/infrastructure/django/: apps.py  enums.py  models.py  repositories.py
web_scrapers/infrastructure/playwright/: auth_strategies.py  browser_factory.py  browser_wrapper.py  drivers.py
web_scrapers/infrastructure/scrapers/: __init__.py  att_scrapers.py  bell_scrapers.py  rogers_scrapers.py  telus_scrapers.py  tmobile_scrapers.py  verizon_scrapers.py
(+52 files in other folders)
