[tool.poetry]
name = "experteliq"
version = "0.1.0"
description = ""
authors = ["Alejandro <alejandro.granados.dev@gmail.com>"]
readme = "README.md"
#package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.10.3"
django = "^5.1.4"
django-stubs = "^5.1.1"
mypy = "^1.13.0"
black = "^24.10.0"
djangorestframework-stubs = "^3.15.1"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.10"
drf-spectacular = "^0.28.0"
mediatr = "^1.3.2"
pre-commit = "^4.0.1"
djangorestframework-simplejwt = "^5.3.1"
django-allauth = "^65.3.1"
pymongo = "^4.11.1"
django-cors-headers = "^4.7.0"
isort = "^6.0.1"
django-softdelete = "^0.11.4"
cryptography = "^44.0.2"
pandas = "^2.2.3"
boto3 = "^1.37.16"
openpyxl = "^3.1.5"
celery = "^5.5.0"
chardet = "^5.2.0"
xlsxwriter = "^3.2.3"
dependency-injector = "^4.48.1"
playwright = "^1.53.0"
requests = "^2.32.0"
msal = "^1.34.0"
fastapi = {extras = ["standard"], version = "^0.125.0"}
sse-starlette = "^3.0.4"
anthropic = "^0.75.0"
playwright-stealth = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
extend-exclude = '''
/(
  | migrations
  | .venv/
  | venv/
)/
'''


[tool.isort]
skip_glob = [
  "**/migrations/*",
  "**/venv/*",
  "**/.venv/*",
]
profile = "black"
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true
line_length = 119
skip = "migrations"
known_django = "django"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]
combine_as_imports = true
include_trailing_comma = true


[tool.mypy]
#disallow_untyped_defs = true
#no_implicit_optional = true
check_untyped_defs = true
exclude = [
  "migrations/",
  "venv/",
]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings"

[[tool.mypy.overrides]]
module = [
  "boto3",
  "django_filters",
  "django_filters.rest_framework",
  "rest_framework.*",
  "rest_framework_jwt.authentication",
  "rest_framework_jwt.blacklist.exceptions",
  "requests",
  "mediatr",
  "django_migration_linter.*",
  "pandas",
  "softdelete.models",
  "celery"
]
ignore_missing_imports = true